--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,13 @@
     "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.14.12",
     "axios": "^1.5.1",
+    "flowbite": "^2.5.2",
+    "framer-motion": "^11.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.16.0",
