--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
+    "resend": "^4.0.0",
     "yup": "^1.3.2",
     "zustand": "^4.4.3"
   },
