--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "resend": "^4.0.0",
     "supertest": "^6.1.6"
   },
   "devDependencies": {
