--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,11 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mailtrap": "^3.4.0",
     "mockgoose": "^8.0.4",
     "mongoose": "^6.0.5",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^2.0.14",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
