--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^8.5.1",
     "mailtrap": "^3.4.0",
     "mockgoose": "^8.0.4",
