--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.14.12",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.5.1",
     "flowbite": "^2.5.2",
     "framer-motion": "^11.11.9",
