added resume to text parsing in upload resume section

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 VITE_GOOGLE_CLIENT_ID="44643601732-e688cj7k67b8kq5iesrkam899s82djep.apps.googleusercontent.com"
 VITE_GOOGLE_CLIENT_SECRET="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"
 VITE_BACKEND_URL="http://localhost:8000"
+VITE_GOOGLE_GEMINI_API_KEY="AIzaSyBpcuGokWiMKqYB1PaqywDLZeVBxmXQI4o"
