--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^1.1.1",
     "resend": "^4.0.0",
     "supertest": "^6.1.6"
   },
