--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@types/axios-mock-adapter": "^1.10.0",
     "@types/jest": "^29.5.6",
     "@types/mocha": "^10.0.2",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/testing-library__jest-dom": "^6.0.0",
