--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
     "google-auth-library": "^9.14.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^8.5.1",
     "mailtrap": "^3.4.0",
     "mockgoose": "^8.0.4",
@@ -42,11 +43,11 @@
     "supertest": "^6.1.6"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
+    "chai": "^4.5.0",
+    "chai-http": "^4.4.0",
     "eslint": "^8.1.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.26.1",
-    "mocha": "^9.1.2"
+    "mocha": "^9.2.2"
   }
 }
