--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": [""]
+    "types": ["jest"]
   },
   // "include": ["src"],
   "exclude": ["src/**/*.test.tsx"],
