--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,18 +29,22 @@
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
+    "resend": "^4.0.0",
     "yup": "^1.3.2",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
     "@types/axios-mock-adapter": "^1.10.0",
-    "@types/jest": "^29.5.6",
+    "@types/chai-dom": "^1.11.3",
+    "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.2",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/sinon": "^17.0.3",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -48,13 +52,19 @@
     "@vitest/coverage-v8": "^0.34.6",
     "autoprefixer": "^10.4.16",
     "axios-mock-adapter": "^1.22.0",
+    "chai": "^5.1.2",
+    "chai-dom": "^1.12.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.7.0",
     "jsdom": "^22.1.0",
+    "mocha": "^10.8.2",
     "postcss": "^8.4.31",
+    "react-test-renderer": "^18.3.1",
+    "sinon": "^19.0.2",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.6"
