google login bug fixed in backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^8.5.1",
     "mockgoose": "^8.0.4",
     "mongoose": "^6.0.5",
